# python-monkeypatch

./: monkeypatch.py  pyproject.toml
